@@ -116,7 +116,7 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
                 regexp.append(".*?"); // Do a non-greedy match
             } else if (c == '_') {
                 regexp.append("."); // match one
-            } else if (REGEXP_CONTROL_CHARS.contains(new Character(c))) {
+            } else if (REGEXP_CONTROL_CHARS.contains(Character.valueOf(c))) {
                 regexp.append("\\x");
                 regexp.append(Integer.toHexString(0xFFFF & c));
             } else {
@@ -387,9 +387,9 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
                     } else if (rc == Long.class) {
                         lv = Long.valueOf(((Number)lv).longValue());
                     } else if (rc == Float.class) {
-                        lv = new Float(((Number)lv).floatValue());
+                        lv = Float.valueOf(((Number)lv).floatValue());
                     } else if (rc == Double.class) {
-                        lv = new Double(((Number)lv).doubleValue());
+                        lv = Double.valueOf(((Number)lv).doubleValue());
                     } else if (convertStringExpressions && rc == String.class) {
                         rv = Byte.valueOf((String)rv);
                     } else {
@@ -401,9 +401,9 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
                     } else if (rc == Long.class) {
                         lv = Long.valueOf(((Number)lv).longValue());
                     } else if (rc == Float.class) {
-                        lv = new Float(((Number)lv).floatValue());
+                        lv = Float.valueOf(((Number)lv).floatValue());
                     } else if (rc == Double.class) {
-                        lv = new Double(((Number)lv).doubleValue());
+                        lv = Double.valueOf(((Number)lv).doubleValue());
                     } else if (convertStringExpressions && rc == String.class) {
                         rv = Short.valueOf((String)rv);
                     } else {
@@ -413,9 +413,9 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
                     if (rc == Long.class) {
                         lv = Long.valueOf(((Number)lv).longValue());
                     } else if (rc == Float.class) {
-                        lv = new Float(((Number)lv).floatValue());
+                        lv = Float.valueOf(((Number)lv).floatValue());
                     } else if (rc == Double.class) {
-                        lv = new Double(((Number)lv).doubleValue());
+                        lv = Double.valueOf(((Number)lv).doubleValue());
                     } else if (convertStringExpressions && rc == String.class) {
                         rv = Integer.valueOf((String)rv);
                     } else {
@@ -425,9 +425,9 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
                     if (rc == Integer.class) {
                         rv = Long.valueOf(((Number)rv).longValue());
                     } else if (rc == Float.class) {
-                        lv = new Float(((Number)lv).floatValue());
+                        lv = Float.valueOf(((Number)lv).floatValue());
                     } else if (rc == Double.class) {
-                        lv = new Double(((Number)lv).doubleValue());
+                        lv = Double.valueOf(((Number)lv).doubleValue());
                     } else if (convertStringExpressions && rc == String.class) {
                         rv = Long.valueOf((String)rv);
                     } else {
@@ -435,11 +435,11 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
                     }
                 } else if (lc == Float.class) {
                     if (rc == Integer.class) {
-                        rv = new Float(((Number)rv).floatValue());
+                        rv = Float.valueOf(((Number)rv).floatValue());
                     } else if (rc == Long.class) {
-                        rv = new Float(((Number)rv).floatValue());
+                        rv = Float.valueOf(((Number)rv).floatValue());
                     } else if (rc == Double.class) {
-                        lv = new Double(((Number)lv).doubleValue());
+                        lv = Double.valueOf(((Number)lv).doubleValue());
                     } else if (convertStringExpressions && rc == String.class) {
                         rv = Float.valueOf((String)rv);
                     } else {
@@ -447,9 +447,9 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
                     }
                 } else if (lc == Double.class) {
                     if (rc == Integer.class) {
-                        rv = new Double(((Number)rv).doubleValue());
+                        rv = Double.valueOf(((Number)rv).doubleValue());
                     } else if (rc == Long.class) {
-                        rv = new Double(((Number)rv).doubleValue());
+                        rv = Double.valueOf(((Number)rv).doubleValue());
                     } else if (rc == Float.class) {
                         rv = new Float(((Number)rv).doubleValue());
                     } else if (convertStringExpressions && rc == String.class) {
