@@ -178,7 +178,7 @@ public final class TypeConversionSupport {
         CONVERSION_MAP.put(new ConversionKey(Float.class, Double.class), new Converter() {
             @Override
             public Object convert(Object value) {
-                return new Double(((Number)value).doubleValue());
+                return Double.valueOf(((Number)value).doubleValue());
             }
         });
         CONVERSION_MAP.put(new ConversionKey(String.class, ActiveMQDestination.class), new Converter() {
