@@ -82,16 +82,16 @@ public class JMSMemtest {
 
     public JMSMemtest(Properties settings) {
         url = settings.getProperty("url");
-        topic = new Boolean(settings.getProperty("topic")).booleanValue();
-        durable = new Boolean(settings.getProperty("durable")).booleanValue();
-        connectionCheckpointSize = new Integer(settings.getProperty("connectionCheckpointSize")).intValue();
-        producerCount = new Integer(settings.getProperty("producerCount")).intValue();
-        consumerCount = new Integer(settings.getProperty("consumerCount")).intValue();
-        messageCount = new Integer(settings.getProperty("messageCount")).intValue();
-        messageSize = new Integer(settings.getProperty("messageSize")).intValue();
-        prefetchSize = new Integer(settings.getProperty("prefetchSize")).intValue();
-        checkpointInterval = new Integer(settings.getProperty("checkpointInterval")).intValue() * 1000;
-        producerCount = new Integer(settings.getProperty("producerCount")).intValue();
+        topic = Boolean.parseBoolean(settings.getProperty("topic"));
+        durable = Boolean.parseBoolean(settings.getProperty("durable"));
+        connectionCheckpointSize = Integer.valueOf(settings.getProperty("connectionCheckpointSize")).intValue();
+        producerCount = Integer.valueOf(settings.getProperty("producerCount")).intValue();
+        consumerCount = Integer.valueOf(settings.getProperty("consumerCount")).intValue();
+        messageCount = Integer.valueOf(settings.getProperty("messageCount")).intValue();
+        messageSize = Integer.valueOf(settings.getProperty("messageSize")).intValue();
+        prefetchSize = Integer.valueOf(settings.getProperty("prefetchSize")).intValue();
+        checkpointInterval = Integer.valueOf(settings.getProperty("checkpointInterval")).intValue() * 1000;
+        producerCount = Integer.valueOf(settings.getProperty("producerCount")).intValue();
         reportName = settings.getProperty("reportName");
         destinationName = settings.getProperty("destinationName");
         reportDirectory = settings.getProperty("reportDirectory");
@@ -290,17 +290,17 @@ public class JMSMemtest {
         Properties settings = new Properties();
         settings.setProperty("domain", topic ? "topic" : "queue");
         settings.setProperty("durable", durable ? "durable" : "non-durable");
-        settings.setProperty("connection_checkpoint_size_kb", new Integer(connectionCheckpointSize).toString());
-        settings.setProperty("producer_count", new Integer(producerCount).toString());
-        settings.setProperty("consumer_count", new Integer(consumerCount).toString());
-        settings.setProperty("message_count", new Long(messageCount).toString());
-        settings.setProperty("message_size", new Integer(messageSize).toString());
-        settings.setProperty("prefetchSize", new Integer(prefetchSize).toString());
-        settings.setProperty("checkpoint_interval", new Integer(checkpointInterval).toString());
+        settings.setProperty("connection_checkpoint_size_kb", Integer.valueOf(connectionCheckpointSize).toString());
+        settings.setProperty("producer_count", Integer.valueOf(producerCount).toString());
+        settings.setProperty("consumer_count", Integer.valueOf(consumerCount).toString());
+        settings.setProperty("message_count", Long.valueOf(messageCount).toString());
+        settings.setProperty("message_size", Integer.valueOf(messageSize).toString());
+        settings.setProperty("prefetchSize", Integer.valueOf(prefetchSize).toString());
+        settings.setProperty("checkpoint_interval", Integer.valueOf(checkpointInterval).toString());
         settings.setProperty("destination_name", destinationName);
         settings.setProperty("report_name", reportName);
         settings.setProperty("report_directory", reportDirectory);
-        settings.setProperty("connection_checkpoint_size", new Integer(connectionCheckpointSize).toString());
+        settings.setProperty("connection_checkpoint_size", Integer.valueOf(connectionCheckpointSize).toString());
         return settings;
     }
 
